# tt_nmx

./: .env  .env.example  .gitignore  Readmi.md  docker-compose-ci.yaml  manage.py  pyproject.toml
.github/workflows/: action.yml
pg_data/: postmaster.pid
pg_data/base/1/: 1259  2619  2619_vm  2696  2840  2841
pg_data/base/16384/: 1247  1249  1259  1259_vm  16385  16386  16391  16393  16394  16397  16399  16401  16402  16405  16407  16411  16413  16415  16421  16425  16429  16433  16435  16439  16441  16448  16449  16450  16462  16464  16465  16477  16478  16479  16491  16492  16493  16499  16512  16513  (+53 more)
pg_data/base/5/: pg_internal.init
pg_data/global/: 1260  1262  2671  pg_control  pg_internal.init
pg_data/pg_stat/: pgstat.stat
store/: filters.py  models.py  serializers.py  urls.py  views.py
store/db_data/: categories.csv  product_categories.csv  products.csv
store/management/commands/: import_data.py
store/migrations/: 0001_initial.py
tt_nmx/: asgi.py  settings.py  urls.py  wsgi.py
